@@ -1,3 +1,7 @@
+[2018-08-11]
+- Fixed Poison Knife itemid [Loa]
+- Fixed FLEE reduction when mobbed [Loa]
+
 [2018-08-09]
 - Fixed Bow of Evil jobid
 
